--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "chai": "4.1.0",
+    "dirty-chai": "^2.0.1",
     "mocha": "5.0.1",
     "standard": "10.0.3"
   }
