--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "url": "https://github.com/wmfs/tymly/issues"
   },
   "dependencies": {
-    "sax": "^1.2.4",
+    "sax": "1.2.4",
     "tymly": "0.0.15"
   },
   "devDependencies": {
     "chai": "4.1.0",
-    "dirty-chai": "^2.0.1",
+    "dirty-chai": "2.0.1",
     "mocha": "5.0.1",
     "standard": "10.0.3"
   }
