--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "chai": "4.1.0",
+    "chai-string": "^1.4.0",
     "dirty-chai": "2.0.1",
     "mocha": "5.0.1",
     "standard": "11.0.0"
