--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "jsonpath": "1.0.0",
     "sax": "1.2.4",
-    "tymly": "0.0.15"
+    "tymly": "^0.0.17"
   },
   "devDependencies": {
     "chai": "4.1.2",
