--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "chai-string": "^1.4.0",
     "dirty-chai": "2.0.1",
     "mocha": "5.0.5",
-    "rimraf": "^2.6.2",
+    "rimraf": "2.6.2",
     "standard": "11.0.1"
   }
 }
