feat: user authorization check in tymly.startExecution
affects: tymly-test-helpers, tymly, tymly-diaries-plugin, addressbase-plus-blueprint,
addressbase-premium-blueprint, building-blueprint, care-quality-commission-blueprint,
demo-blueprint, food-hygiene-blueprint, heritage-blueprint, indices-multi-deprivation-blueprint,
ofsted-blueprint

Fixing tests so they don't fail for lack of authorization

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dirty-chai": "2.0.1",
     "mocha": "5.2.0",
     "rimraf": "2.6.2",
-    "standard": "11.0.1"
+    "standard": "11.0.1",
+    "tymly-test-helpers": "0.0.1"
   }
 }
