--- a/package.json
+++ b/package.json
@@ -53,5 +53,14 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "release": {
+    "analyzeCommits": {
+      "preset": "angular",
+      "releaseRules": [
+        {"type": "build", "scope":"deps", "release": "patch"},
+        {"type": "build", "scope":"devDeps", "release": "patch"}
+      ]
+    }
   }
 }
