--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
   "dependencies": {
     "deepmerge": "^2.1.0",
     "jsonpath": "1.0.0",
-    "sax": "1.2.4",
-    "@wmfs/tymly": "1.3.0",
-    "@wmfs/tymly-etl-plugin": "1.2.0"
+    "sax": "1.2.4"
   },
   "devDependencies": {
     "chai": "4.1.2",
@@ -38,7 +36,9 @@
     "semantic-release": "^15.5.0",
     "standard": "11.0.1",
     "@wmfs/tymly-pg-plugin": "1.3.0",
-    "@wmfs/tymly-test-helpers": "1.0.0"
+    "@wmfs/tymly-test-helpers": "1.0.0",
+    "@wmfs/tymly": "1.3.0",
+    "@wmfs/tymly-etl-plugin": "1.2.0"
   },
   "scripts": {
     "lint": "standard",
@@ -58,8 +58,16 @@
     "analyzeCommits": {
       "preset": "angular",
       "releaseRules": [
-        {"type": "build", "scope":"deps", "release": "minor"},
-        {"type": "build", "scope":"deps-dev", "release": "patch"}
+        {
+          "type": "build",
+          "scope": "deps",
+          "release": "minor"
+        },
+        {
+          "type": "build",
+          "scope": "deps-dev",
+          "release": "patch"
+        }
       ]
     }
   }
