--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
   "dependencies": {
     "deepmerge": "^2.1.0",
     "jsonpath": "1.0.0",
-    "sax": "1.2.4"
+    "sax": "1.2.4",
+    "@wmfs/tymly": "1.1.1",
+    "@wmfs/tymly-etl-plugin": "1.0.0"
   },
   "devDependencies": {
     "chai": "4.1.2",
     "chai-string": "^1.4.0",
-    "codecov": "3.0.4",
+    "codecov": "3.0.2",
+    "conventional-changelog-metahub": "2.0.2",
     "cz-conventional-changelog": "2.1.0",
     "dirty-chai": "2.0.1",
     "mocha": "5.2.0",
@@ -35,10 +38,10 @@
     "rimraf": "2.6.2",
     "semantic-release": "^15.5.0",
     "standard": "11.0.1",
-    "@wmfs/tymly-pg-plugin": "1.9.0",
-    "@wmfs/tymly-test-helpers": "1.0.1",
-    "@wmfs/tymly": "1.7.0",
-    "@wmfs/tymly-etl-plugin": "1.7.0"
+    "@semantic-release/changelog": "2.1.1",
+    "@semantic-release/git": "6.0.1",
+    "@wmfs/tymly-pg-plugin": "1.0.3",
+    "@wmfs/tymly-test-helpers": "1.0.0"
   },
   "scripts": {
     "lint": "standard",
@@ -53,17 +56,5 @@
   },
   "publishConfig": {
     "access": "public"
-  },
-  "release": {
-    "analyzeCommits": {
-      "preset": "angular",
-      "releaseRules": [
-        {
-          "type": "build",
-          "scope": "deps",
-          "release": "minor"
-        }
-      ]
-    }
   }
 }
