--- a/package.json
+++ b/package.json
@@ -23,25 +23,25 @@
     "deepmerge": "^2.1.0",
     "jsonpath": "1.0.0",
     "sax": "1.2.4",
-    "@wmfs/tymly": "1.1.1",
-    "@wmfs/tymly-etl-plugin": "1.0.0"
+    "@wmfs/tymly": "1.7.1",
+    "@wmfs/tymly-etl-plugin": "1.7.0"
   },
   "devDependencies": {
     "chai": "4.1.2",
     "chai-string": "^1.4.0",
-    "codecov": "3.0.2",
+    "codecov": "3.0.4",
     "conventional-changelog-metahub": "2.0.2",
     "cz-conventional-changelog": "2.1.0",
     "dirty-chai": "2.0.1",
     "mocha": "5.2.0",
     "nyc": "12.0.2",
     "rimraf": "2.6.2",
-    "semantic-release": "^15.5.0",
+    "semantic-release": "15.7.1",
     "standard": "11.0.1",
     "@semantic-release/changelog": "2.1.1",
     "@semantic-release/git": "6.0.1",
-    "@wmfs/tymly-pg-plugin": "1.0.3",
-    "@wmfs/tymly-test-helpers": "1.0.0"
+    "@wmfs/tymly-pg-plugin": "1.9.0",
+    "@wmfs/tymly-test-helpers": "1.0.1"
   },
   "scripts": {
     "lint": "standard",
