--- a/package.json
+++ b/package.json
@@ -21,10 +21,9 @@
   },
   "dependencies": {
     "deepmerge": "2.1.1",
-    "jsonpath": "1.0.0",
-    "sax": "1.2.4",
-    "@wmfs/tymly": "1.15.2",
-    "@wmfs/tymly-etl-plugin": "1.19.0"
+    "@wmfs/gazetteer-blueprint": "1.3.0",
+    "@wmfs/tymly-etl-plugin": "1.17.0",
+    "@wmfs/tymly-pg-plugin": "1.23.0"
   },
   "devDependencies": {
     "chai": "4.1.2",
@@ -40,7 +39,7 @@
     "standard": "11.0.1",
     "@semantic-release/changelog": "3.0.0",
     "@semantic-release/git": "7.0.1",
-    "@wmfs/tymly-pg-plugin": "1.23.0",
+    "@wmfs/tymly": "1.15.1",
     "@wmfs/tymly-test-helpers": "1.1.0"
   },
   "scripts": {
