--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "standard": "12.0.1",
     "@semantic-release/changelog": "3.0.4",
     "@semantic-release/git": "7.0.16",
+    "@semantic-release/exec": "3.3.7",
     "@wmfs/tymly": "1.98.0",
     "@wmfs/tymly-test-helpers": "1.2.0"
   },
