ci: chmod version_blueprint script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,9 @@ jobs:
           npm install
     - run:
         name: release
-        command: npx semantic-release
+        command: |
+          chmod +x version_blueprint
+          npx semantic-release
 
 
 workflows:
