--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ workflows:
   version: 2
   test_and_release:
     jobs:
-    - test
+    - test:
         context: tymly_global
     - release:
         context: tymly_global
