--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   unit test:
     docker:
       # use node:lts
-      - image: circleci/node:lts
+      - image: cimg/node:lts
         environment:
            TZ: "Europe/London"
            PG_CONNECTION_STRING: postgres://postgres:postgres@localhost:5432/circle_test
@@ -29,7 +29,7 @@ jobs:
           command: npm run coverage
   lint:
     docker:
-      - image: circleci/node:lts
+      - image: cimg/node:lts
     working_directory: ~/repo
     steps:
       - checkout
@@ -42,7 +42,7 @@ jobs:
   release:
     docker:
     # use node:lts
-    - image: circleci/node:lts
+    - image: cimg/node:lts
       environment:
         TZ: "Europe/London"
     working_directory: ~/repo
