--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@wmfs/tymly": "1.212.0",
     "@wmfs/tymly-test-helpers": "1.8.0",
     "@wmfs/gazetteer-blueprint": "1.33.2",
+    "@wmfs/vision-gazetteer-blueprint": "1.0.0",
     "@wmfs/tymly-etl-plugin": "1.155.0",
     "@wmfs/tymly-pg-plugin": "1.256.0"
   },
