--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "url": "https://github.com/wmfs/addressbase-premium-blueprint/issues"
   },
   "dependencies": {
-    "csv-string": "4.1.1"
+    "csv-string": "4.1.1",
+    "csv-parse": "5.5.6"
   },
   "devDependencies": {
     "chai": "4.5.0",
