--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "url": "https://github.com/wmfs/addressbase-premium-blueprint/issues"
   },
   "dependencies": {
-    "csv-string": "4.1.1",
-    "csv-parse": "5.5.6"
+    "csv-string": "4.1.1"
   },
   "devDependencies": {
     "chai": "4.5.0",
